# ARS

./: .gitignore  .gitmodules  AGENT.md  README.md  README_CN.md  data_extraction_report.md  paper_draft.md  process.md  pyproject.toml  sync_rules.ps1  train.py  wikitext2_standard_serialization_report.md
config/: cifar10_ada_rmsuon_full.toml  cifar10_adafisher.toml  cifar10_adamw.toml  cifar10_adamw_pi.toml  cifar10_ars2_neo.toml  cifar10_ars2_neo_sync.toml  cifar10_ars_sync_full.toml  cifar10_diag_f3e_hardon.toml  cifar10_diag_fog.toml  cifar10_diag_hadron.toml  cifar10_f3el.toml  cifar10_f3ewd.toml  cifar10_fog.toml  cifar10_hadron.toml  cifar10_hadron_beta1.toml  cifar10_kfac.toml  cifar10_muon.toml  cifar10_pi_muon_kfac.toml  cifar10_rmsoun.toml  grok_ada_rmsuon_align.toml  grok_adamw.toml  grok_ars_align.toml  grok_muon_tuned.toml  lrp_cifar10_adamw_100e.toml  lrp_cifar10_ars2_neo_aga_20e.toml  lrp_cifar10_ars2_neo_agsam_20e.toml  lrp_cifar10_ars2_neo_base_100e.toml  lrp_cifar10_ars2_neo_sync_100e_rho01.toml  lrp_cifar10_ars2_neo_sync_100e_rho05.toml  lrp_cifar10_ars2_neo_sync_100e_rho10.toml  lrp_cifar10_ars2_neo_sync_60e_rho01.toml  lrp_cifar10_ars2_neo_sync_60e_rho05.toml  lrp_cifar10_ars2c_aga_20e.toml  lrp_cifar10_ars2c_agsam_20e.toml  lrp_cifar10_ars2c_argsam_agsam_20e.toml  lrp_cifar10_ars2c_saga_aga_20e.toml  lrp_cifar10_ars2c_sync_60e_rho01.toml  lrp_cifar10_ars2c_unlock_aga_20e.toml  lrp_cifar10_ars2c_unlock_agsam_20e.toml  lrp_cifar10_ars2c_unlock_sync_60e_rho01.toml  (+67 more)
dev_notes/: F3EO_gradient_flow_debugging_saga.md
docs/: vfe_manifold_and_hadron_critique.md
exp/: bench_1step.py
model/: __init__.py  embeddings.py  grokking_transformer.py  nano_gpt.py  qwen3_rope.py  (+4 more)
(+229 files in other folders)
