[project]
name = "ARS"
version = "0.1.0"
authors = [{ name = "Rui.Lin", email = "Lin.Rui.ipwt@proton.me" }]
description = "ARS-Bench: The world first third-order optimizer benchmark framework"
readme = "README.md"
requires-python = ">=3.12, <3.15"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
    "torch>=2.13.0",
    "rich>=14.0.0",
    "tqdm",
    "toml>=0.10.2",
    "psutil>=7.1.3",
    "pyyaml>=6.0.3",
    "einops>=0.8.1",
    "asdl",
    "timm>=1.0.21",
    "datasets>=4.4.1",
    "tokenizers>=0.22.1",
    "transformers>=4.57.3",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["ref", ".venv"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ARS*", "scripts*", "optimizer*", "model*", "task*", "config*"]

[project.urls]
"Homepage" = "https://github.com/dmf-archive/ARS-Bench"
"Bug Tracker" = "https://github.com/dmf-archive/ARS-Bench/issues"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "pytest>=8.4.1",
    "torchvision>=0.28.0",
    "torchaudio>=2.11.0",
    "types-pyyaml>=6.0.12.20250516",
    "types-toml>=0.10.8.20240310",
]

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true
exclude = ["ref"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]
asdl = { git = "https://github.com/kazukiosawa/asdl", rev = "011a942b2698b9ec33b0c8c47c96bd49335e5d80" }


[tool.ruff]
exclude = ["ref", "exp", ".venv"]

[tool.ruff.lint]
select = ["W", "F", "I", "UP", "B", "NPY", "SIM", "ISC", "TID"]
ignore = ["B905"]
